Added assets & Began work on landing page

--- a/index.html
+++ b/index.html
@@ -23,7 +23,14 @@
 
     <header>
       <!-- Normal Nav -->
-      <nav></nav>
+      <nav>
+        <div class="navbar">
+          <div class="navbar-navigation">
+            <a href="index.html">RAIN CITY WEBSITES</a>
+          </div>
+        </div>
+        </div>
+      </nav>
     </header>
 
     <!-- ============================================ -->
