More work on landing page

--- a/index.html
+++ b/index.html
@@ -28,6 +28,18 @@
           <div class="navbar-navigation">
             <a href="index.html">RAIN CITY WEBSITES</a>
           </div>
+          <div class="navbar-menu">
+            <ul>
+              <li><a class="link" href="about.html">ABOUT</a></li>
+              <li><a class="link" href="services.html">SERVICES</a></li>
+              <li><a class="link" href="portfolio.html">PORTFOLIO</a></li>
+              <li><a class="link" href="contact.html">CONTACT</a></li>
+            </ul>
+          </div>
+          <div class="navbar-menu-mobile">
+            <a class="link" href="about.html">NAVIGATION</a>
+            <a href="about.html"><img src="images/menu.svg"></a>
+          </div>
         </div>
         </div>
       </nav>
@@ -37,17 +49,52 @@
     <!--                   LANDING                    -->
     <!-- ============================================ -->
 
-    <section id="hero"></section>
+    <section id="hero">
+      <div class="container">
+        <div class="left-section">
+          <div class="hero-header">
+            SMALL BUSINESS
+          </div><div class="hero-header">
+            WEB DESIGN AND 
+          </div>
+          <div class="hero-header">
+            DEVELOPMENT
+          </div>
+          <p>
+            No page builders or WordPress necessary - We offer hand-coded
+            websites with superior results from $150/mo.
+          </p>
+        </div>
+        <div class="right-section">
+          <img
+            class="light"
+            decoding="async"
+            src="/images/Seattle_Isometric.svg"
+            alt=""
+            aria-hidden="true"
+            width="105%"
+          />
+        </div>
+      </div>
+    </section>
 
     <!-- ============================================ -->
     <!--                   SERVICES                   -->
     <!-- ============================================ -->
+
+    <div id="section-title">
+      <div class="container">
+        <div class="left-section">What We Do</div>
+        <div class="right-section">OUR WORK</div>
+      </div>
+    </div>
 
     <section id="services" class="section"></section>
 
     <!-- ============================================ -->
     <!--                   PORTFOLIO                  -->
     <!-- ============================================ -->
+    
 
     <section id="portfolio" class="section"></section>
 
