--- a/index.html
+++ b/index.html
@@ -65,6 +65,15 @@
             websites with superior results from $150/mo.
           </p>
         </div>
+        <div class="left-section-mobile">
+          <div class="hero-header">
+            SMALL BUSINESS WEB DESIGN AND DEVELOPMENT
+          </div>
+          <p>
+            No page builders or WordPress necessary - We offer hand-coded
+            websites with superior results from $150/mo.
+          </p>
+        </div>
         <div class="right-section">
           <img
             class="light"
