--- a/index.html
+++ b/index.html
@@ -67,7 +67,12 @@
         </div>
         <div class="left-section-mobile">
           <div class="hero-header">
-            SMALL BUSINESS WEB DESIGN AND DEVELOPMENT
+            SMALL BUSINESS
+          </div><div class="hero-header">
+            WEB DESIGN AND 
+          </div>
+          <div class="hero-header">
+            DEVELOPMENT
           </div>
           <p>
             No page builders or WordPress necessary - We offer hand-coded
