Started Services section

--- a/index.html
+++ b/index.html
@@ -103,7 +103,34 @@
       </div>
     </div>
 
-    <section id="services" class="section"></section>
+    <section id="services" class="section">
+      <div class="container">
+        <div class="left-section">
+          <p>
+            <span class="services-header">RAIN CITY WEBSITES</span><br />gets
+            the job done.
+          </p>
+        </div>
+        <div class="right-section">
+          <p>
+            We specialize in small business web design and development for
+            clients anywhere in the US. Every line of code is written by hand to
+            ensure the best performance, which helps bring in more customers to
+            your site and bring more revenue to your business.
+          </p>
+          <p>
+            We work with you to design, manage and implement innovative
+            solutions that meet the business needs and address the challenges of
+            growth.
+          </p>
+          <!--
+          <div class="hero-button">
+            <button id="button1">How It Works</button>
+          </div>
+        -->
+        </div>
+      </div>
+    </section>
 
     <!-- ============================================ -->
     <!--                   PORTFOLIO                  -->
