--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,26 @@
 
     <header>
       <!-- Normal Nav -->
-      <nav></nav>
+      <nav>
+        <div class="navbar">
+          <div class="navbar-navigation">
+            <a href="index.html">RAIN CITY WEBSITES</a>
+          </div>
+          <div class="navbar-menu">
+            <ul>
+              <li><a class="link" href="about.html">ABOUT</a></li>
+              <li><a class="link" href="services.html">SERVICES</a></li>
+              <li><a class="link" href="blog.html">BLOG</a></li>
+              <li><a class="link" href="contact.html">CONTACT</a></li>
+            </ul>
+          </div>
+          <div class="navbar-menu-mobile">
+            <a class="link" href="about.html">NAVIGATION</a>
+            <a href="about.html"><img src="images/menu.svg"></a>
+          </div>
+        </div>
+        </div>
+      </nav>
     </header>
 
     <!-- ============================================ -->
