--- a/blog.html
+++ b/blog.html
@@ -23,22 +23,83 @@
 
     <header>
       <!-- Normal Nav -->
-      <nav></nav>
+      <nav>
+        <div class="navbar">
+          <div class="navbar-navigation">
+            <a href="index.html">RAIN CITY WEBSITES</a>
+          </div>
+          <div class="navbar-menu">
+            <ul>
+              <li><a class="link" href="about.html">ABOUT</a></li>
+              <li><a class="link" href="services.html">SERVICES</a></li>
+              <li><a class="link" href="blog.html">BLOG</a></li>
+              <li><a class="link" href="contact.html">CONTACT</a></li>
+            </ul>
+          </div>
+          <div class="navbar-menu-mobile">
+            <a class="link" href="about.html">NAVIGATION</a>
+            <a href="about.html"><img src="images/menu.svg"></a>
+          </div>
+        </div>
+        </div>
+      </nav>
     </header>
 
     <!-- ============================================ -->
     <!--                   LANDING                    -->
     <!-- ============================================ -->
 
-    <section id="hero"></section>
+    <section id="hero">
+      <div class="container">
+        <div class="left-section">
+          <div class="hero-header">
+            CONSISTENTLY
+          </div><div class="hero-header">
+            PUSHING THE 
+          </div>
+          <div class="hero-header">
+            ENVELOPE
+          </div>
+          <p>
+            Scaling your business through a data driven approach is what we specialize in.  Explore our different services below to see if we’d be a great fit for your company.
+          </p>
+        </div>
+        <div class="left-section-mobile">
+          <div class="hero-header">
+            CONSISTENTLY
+          </div><div class="hero-header">
+            PUSHING THE 
+          </div>
+          <div class="hero-header">
+            ENVELOPE
+          </div>
+          <p>
+            Scaling your business through a data driven approach is what we specialize in.  Explore our different services below to see if we’d be a great fit for your company.
+          </p>
+        </div>
+        <div class="right-section">
+          <img
+            class="light"
+            decoding="async"
+            src="/images/Team presentation _Isometric.svg"
+            alt=""
+            aria-hidden="true"
+            width="105%"
+          />
+        </div>
+      </div>
+    </section>
 
     <!-- ============================================ -->
     <!--                   SERVICES                   -->
     <!-- ============================================ -->
 
-    <section id="services" class="section">
-      <div class="container"></div>
-    </section>
+    <div id="section-title">
+      <div class="container">
+        <div class="left-section">Latest Articles</div>
+        <div class="right-section">BLOG</div>
+      </div>
+    </div>
 
     <!-- ============================================ -->
     <!--                   PORTFOLIO                  -->
