--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <ul>
               <li><a class="link" href="about.html">ABOUT</a></li>
               <li><a class="link" href="services.html">SERVICES</a></li>
-              <li><a class="link" href="portfolio.html">PORTFOLIO</a></li>
+              <li><a class="link" href="blog.html">BLOG</a></li>
               <li><a class="link" href="contact.html">CONTACT</a></li>
             </ul>
           </div>
