--- a/services.html
+++ b/services.html
@@ -21,21 +21,85 @@
     <!--                   NAVIGATION                 -->
     <!-- ============================================ -->
 
-    <header></header>
+    <header>
+      <!-- Normal Nav -->
+      <nav>
+        <div class="navbar">
+          <div class="navbar-navigation">
+            <a href="index.html">RAIN CITY WEBSITES</a>
+          </div>
+          <div class="navbar-menu">
+            <ul>
+              <li><a class="link" href="about.html">ABOUT</a></li>
+              <li><a class="link" href="services.html">SERVICES</a></li>
+              <li><a class="link" href="blog.html">BLOG</a></li>
+              <li><a class="link" href="contact.html">CONTACT</a></li>
+            </ul>
+          </div>
+          <div class="navbar-menu-mobile">
+            <a class="link" href="about.html">NAVIGATION</a>
+            <a href="about.html"><img src="images/menu.svg"></a>
+          </div>
+        </div>
+        </div>
+      </nav>
+    </header>
 
     <!-- ============================================ -->
     <!--                   LANDING                    -->
     <!-- ============================================ -->
 
-    <section id="hero"></section>
+    <section id="hero">
+      <div class="container">
+        <div class="left-section">
+          <div class="hero-header">
+            RAISING THE
+          </div><div class="hero-header">
+            STANDARD FOR
+          </div>
+          <div class="hero-header">
+            TECH SOLUTIONS
+          </div>
+          <p>
+            Scaling your business through a data driven approach is what we specialize in.  Explore our different services below to see if we’d be a great fit for your company.
+          </p>
+        </div>
+        <div class="left-section-mobile">
+          <div class="hero-header">
+            RAISING THE
+          </div><div class="hero-header">
+            STANDARD FOR
+          </div>
+          <div class="hero-header">
+            TECH SOLUTIONS
+          </div>
+          <p>
+            Scaling your business through a data driven approach is what we specialize in.  Explore our different services below to see if we’d be a great fit for your company.
+          </p>
+        </div>
+        <div class="right-section">
+          <img
+            class="light"
+            decoding="async"
+            src="/images/SEO_Isometric.svg"
+            alt=""
+            aria-hidden="true"
+            width="105%"
+          />
+        </div>
+      </div>
+    </section>
 
     <!-- ============================================ -->
     <!--                   SERVICES                   -->
     <!-- ============================================ -->
 
-    <section id="services" class="section">
-      <div class="container"></div>
-    </section>
+    <div id="section-title">
+      <div class="container">
+        <div class="left-section">What We Do</div>
+        <div class="right-section">SERVICES</div>
+      </div>
+    </div>
 
     <!-- ============================================ -->
     <!--                   PORTFOLIO                  -->
@@ -55,7 +119,6 @@
 
     <footer id="footer"></footer>
     <div class="socials">
-      <div class="container">SOCIALS</div>
     </div>
   </body>
 </html>
