--- a/index.html
+++ b/index.html
@@ -115,20 +115,21 @@
           <p>
             We specialize in small business web design and development for
             clients anywhere in the US. Every line of code is written by hand to
-            ensure the best performance, which helps bring in more customers to
-            your site and bring more revenue to your business.
+            ensure the best performance.
           </p>
           <p>
             We work with you to design, manage and implement innovative
             solutions that meet the business needs and address the challenges of
             growth.
           </p>
-          <!--
           <div class="hero-button">
-            <button id="button1">How It Works</button>
+            <a href="services.html" id="button1">HOW IT WORKS<img src="/images/noun-arrow.svg"></a>
           </div>
-        -->
         </div>
+        <div class="hero-button-tablet">
+          <a href="services.html" id="button1">HOW IT WORKS<img src="/images/noun-arrow.svg"></a>
+        </div>
+        
       </div>
     </section>
 
@@ -137,7 +138,68 @@
     <!-- ============================================ -->
     
 
-    <section id="portfolio" class="section"></section>
+    <section id="portfolio" class="section">
+      <div class="container">
+        <div class="left-section">
+          <div class="title">CAKE CANNABIS</div>
+          <div class="description">
+            We focus on digital design, strategic marketing, and all things
+            technology to better businesses and brand experiences.
+          </div>
+          <div class="subtitles">
+            <span>WEB DESIGN</span>
+            <span>WEBFLOW DEVELOPMENT</span>
+          </div>
+          <img
+            class="light"
+            decoding="async"
+            src="/images/portfolio1.webp"
+            alt=""
+            aria-hidden="true"
+            width="100%"
+          />
+        </div>
+        <div class="middle-section">
+          <div class="title">RONDO'S LIFE COACHING</div>
+          <div class="description">
+            We focus on digital design, strategic marketing, and all things
+            technology to better businesses and brand experiences.
+          </div>
+          <div class="subtitles">
+            <span>WEB DESIGN</span>
+            <span>WEBSITE DEVELOPMENT</span>
+          </div>
+          <img
+            class="light"
+            decoding="async"
+            src="/images/portfolio2.webp"
+            alt=""
+            aria-hidden="true"
+            width="100%"
+          />
+        </div>
+
+        <div class="right-section">
+          <div class="title">MASSAGE WEBSITE</div>
+          <div class="description">
+            We focus on digital design, strategic marketing, and all things
+            technology to better businesses and brand experiences.
+          </div>
+          <div class="subtitles">
+            <span>WEB DESIGN</span>
+            <span>WEBSITE DEVELOPMENT</span>
+          </div>
+          <img
+            class="light"
+            decoding="async"
+            src="/images/portfolio3.webp"
+            alt=""
+            aria-hidden="true"
+            width="100%"
+          />
+        </div>
+      </div>
+    </section>
 
     <!-- ============================================ -->
     <!--                   PRICING                    -->
