Added pricing section

--- a/index.html
+++ b/index.html
@@ -141,62 +141,71 @@
     <section id="portfolio" class="section">
       <div class="container">
         <div class="left-section">
-          <div class="title">CAKE CANNABIS</div>
-          <div class="description">
-            We focus on digital design, strategic marketing, and all things
-            technology to better businesses and brand experiences.
-          </div>
-          <div class="subtitles">
-            <span>WEB DESIGN</span>
-            <span>WEBFLOW DEVELOPMENT</span>
-          </div>
-          <img
-            class="light"
-            decoding="async"
-            src="/images/portfolio1.webp"
-            alt=""
-            aria-hidden="true"
-            width="100%"
-          />
+          <a href="services.html" class="porfolio-link">
+            <div class="title">CAKE CANNABIS</div>
+            <div class="description">
+              We focus on digital design, strategic marketing, and all things
+              technology to better businesses and brand experiences. We focus on digital design, strategic marketing, and all things
+              technology to better businesses and brand experiences.
+            </div>
+            <div class="subtitles">
+              <span>WEB DESIGN</span>
+              <span>WEBFLOW DEVELOPMENT</span>
+            </div>
+            <img
+              class="light"
+              decoding="async"
+              src="/images/portfolio1.webp"
+              alt=""
+              aria-hidden="true"
+              width="100%"
+            />
+          </a>
         </div>
         <div class="middle-section">
-          <div class="title">RONDO'S LIFE COACHING</div>
-          <div class="description">
-            We focus on digital design, strategic marketing, and all things
-            technology to better businesses and brand experiences.
-          </div>
-          <div class="subtitles">
-            <span>WEB DESIGN</span>
-            <span>WEBSITE DEVELOPMENT</span>
-          </div>
-          <img
-            class="light"
-            decoding="async"
-            src="/images/portfolio2.webp"
-            alt=""
-            aria-hidden="true"
-            width="100%"
-          />
+          <a href="services.html" class="porfolio-link">
+            <div class="title">RONDO'S LIFE COACHING</div>
+            <div class="description">
+              We focus on digital design, strategic marketing, and all things
+              technology to better businesses and brand experiences. We focus on digital design, strategic marketing, and all things
+              technology to better businesses and brand experiences.
+            </div>
+            <div class="subtitles">
+              <span>WEB DESIGN</span>
+              <span>WEBSITE DEVELOPMENT</span>
+            </div>
+            <img
+              class="light"
+              decoding="async"
+              src="/images/portfolio2.webp"
+              alt=""
+              aria-hidden="true"
+              width="100%"
+            />
+          </a>
         </div>
 
         <div class="right-section">
-          <div class="title">MASSAGE WEBSITE</div>
-          <div class="description">
-            We focus on digital design, strategic marketing, and all things
-            technology to better businesses and brand experiences.
-          </div>
-          <div class="subtitles">
-            <span>WEB DESIGN</span>
-            <span>WEBSITE DEVELOPMENT</span>
-          </div>
-          <img
-            class="light"
-            decoding="async"
-            src="/images/portfolio3.webp"
-            alt=""
-            aria-hidden="true"
-            width="100%"
-          />
+          <a href="services.html" class="porfolio-link">
+            <div class="title">MASSAGE WEBSITE</div>
+            <div class="description">
+              We focus on digital design, strategic marketing, and all things
+              technology to better businesses and brand experiences.  We focus on digital design, strategic marketing, and all things
+              technology to better businesses and brand experiences.
+            </div>
+            <div class="subtitles">
+              <span>WEB DESIGN</span>
+              <span>WEBSITE DEVELOPMENT</span>
+            </div>
+            <img
+              class="light"
+              decoding="async"
+              src="/images/portfolio3.webp"
+              alt=""
+              aria-hidden="true"
+              width="100%"
+            />
+          </a>
         </div>
       </div>
     </section>
@@ -204,13 +213,144 @@
     <!-- ============================================ -->
     <!--                   PRICING                    -->
     <!-- ============================================ -->
+    <section id="section-title">
+      <div class="container">
+        <div class="left-section">How It Works</div>
+        <div class="right-section">PRICING</div>
+      </div>
+    </section>
 
-    <section id="pricing" class="section"></section>
+    <section id="pricing" class="section">
+      <div class="container">
+        <div class="left-section">
+          <div class="title">SMALL MONTHLY <span id="orange-header">PAYMENTS</span></div>
+          <div class="description">
+            $0 down for a standard 5 page small business website. If you need
+            more than that then we have to do custom pricing based on the scope
+            of work, number of additional pages, and time involved.
+          </div>
+          <div class="description">
+            You own your domain, content, listing, and profiles. Cancel anytime
+            with no fees or hassle.
+          </div>
+        </div>
+        <div class="right-section">
+          <div class="pricing-box-container">
+            <img
+              class="light"
+              decoding="async"
+              src="/images/verify.svg"
+              alt=""
+              aria-hidden="true"
+              width="14%"
+            />
+            <div class="pricing-box">
+              <div class="pricing-title">Hosting Fees Included</div>
+              <p>Hosting fees are built right into the monthly payment.</p>
+              <hr />
+            </div>
+          </div>
+          <div class="pricing-box-container">
+            <img
+              class="light"
+              decoding="async"
+              src="/images/verify.svg"
+              alt=""
+              aria-hidden="true"
+              width="14%"
+            />
+            <div class="pricing-box">
+              <div class="pricing-title">Unlimited Edits</div>
+              <p>
+                Change anything you want at anytime and it will be done that
+                day.
+              </p>
+              <hr />
+            </div>
+          </div>
+          <div class="pricing-box-container">
+            <img
+              class="light"
+              decoding="async"
+              src="/images/verify.svg"
+              alt=""
+              aria-hidden="true"
+              width="14%"
+            />
+            <div class="pricing-box">
+              <div class="pricing-title">24/7 Customer Service</div>
+              <p>
+                Call direct anytime, no phone trees or automated
+                responses.
+              </p>
+              <hr />
+            </div>
+          </div>
+          <div class="pricing-box-container">
+            <img
+              class="light"
+              decoding="async"
+              src="/images/verify.svg"
+              alt=""
+              aria-hidden="true"
+              width="14%"
+            />
+            <div class="pricing-box">
+              <div class="pricing-title">Web Design & Development</div>
+              <p>Includes over 40 hours of design, development, and testing.</p>
+              <hr />
+            </div>
+          </div>
+          <div class="pricing-box-container">
+            <img
+              class="light"
+              decoding="async"
+              src="/images/verify.svg"
+              alt=""
+              aria-hidden="true"
+              width="14%"
+            />
+            <div class="pricing-box">
+              <div class="pricing-title">Citations And Listings</div>
+              <p>
+                It's important to have your website linked from other websites,
+                like directories.
+              </p>
+              <hr />
+            </div>
+          </div>
+          <div class="pricing-box-container">
+            <img
+              class="light"
+              decoding="async"
+              src="/images/verify.svg"
+              alt=""
+              aria-hidden="true"
+              width="14%"
+            />
+            <div class="pricing-box">
+              <div class="pricing-title">Google Analytics</div>
+              <p>
+                We install Analytics for free to monitor traffic and where it
+                comes from.
+              </p>
+              <hr />
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <!-- ============================================ -->
     <!--                   BLOG                       -->
     <!-- ============================================ -->
 
+    <section id="section-title">
+      <div class="container">
+        <div class="left-section">Latest Insights</div>
+        <div class="right-section">BLOG</div>
+      </div>
+    </section>
     <section id="blog" class="section"></section>
 
     <!-- ============================================ -->
