Completed blog section

--- a/index.html
+++ b/index.html
@@ -351,7 +351,82 @@
         <div class="right-section">BLOG</div>
       </div>
     </section>
-    <section id="blog" class="section"></section>
+    <section id="blog" class="section">
+      <div class="container">
+        <a href="services.html" class="blog-element">
+          <div class="blog-date">
+            11.12.2022
+          </div>
+          <div class="blog-header">
+            Advantages of Developing your own Website
+          </div>
+          <div class="blog-link">
+            <div class="blog-link-text">READ MORE</div>
+            <img src="/images/noun-arrow.svg">
+          </div>
+        </a>
+        <a href="services.html" class="blog-element">
+          <div class="blog-date">
+            11.12.2022
+          </div>
+          <div class="blog-header">
+            Optimizing Images for the Web
+          </div>
+          <div class="blog-link">
+            <div class="blog-link-text">READ MORE</div>
+            <img src="/images/noun-arrow.svg">
+          </div>
+        </a>
+        <a href="services.html" class="blog-element">
+          <div class="blog-date">
+            11.12.2022
+          </div>
+          <div class="blog-header">
+            How to Drive Traffic to your Website
+          </div>
+          <div class="blog-link">
+            <div class="blog-link-text">READ MORE</div>
+            <img src="/images/noun-arrow.svg">
+          </div>
+        </a>
+        <a href="services.html" class="blog-element">
+          <div class="blog-date">
+            11.12.2022
+          </div>
+          <div class="blog-header">
+            Benefits of a Professional Business Website
+          </div>
+          <div class="blog-link">
+            <div class="blog-link-text">READ MORE</div>
+            <img src="/images/noun-arrow.svg">
+          </div>
+        </a>
+        <a href="services.html" class="blog-element">
+          <div class="blog-date">
+            11.12.2022
+          </div>
+          <div class="blog-header">
+            SEO Strategies for Today and Tomorrow
+          </div>
+          <div class="blog-link">
+            <div class="blog-link-text">READ MORE</div>
+            <img src="/images/noun-arrow.svg">
+          </div>
+        </a>
+        <a href="services.html" class="blog-element">
+          <div class="blog-date">
+            11.12.2022
+          </div>
+          <div class="blog-header">
+            Advantages of Developing your own Website
+          </div>
+          <div class="blog-link">
+            <div class="blog-link-text">READ MORE</div>
+            <img src="/images/noun-arrow.svg">
+          </div>
+        </a>
+      </div>
+    </section>
 
     <!-- ============================================ -->
     <!--                   FOOTER                     -->
