--- a/index.html
+++ b/index.html
@@ -351,6 +351,7 @@
         <div class="right-section">BLOG</div>
       </div>
     </section>
+
     <section id="blog" class="section">
       <div class="container">
         <a href="services.html" class="blog-element">
@@ -431,7 +432,13 @@
     <!-- ============================================ -->
     <!--                   FOOTER                     -->
     <!-- ============================================ -->
-
+    <section id="section-title">
+      <div class="container">
+        <div class="left-section">Get In Touch</div>
+        <div class="right-section">CONTACT</div>
+      </div>
+    </section>
+    
     <footer id="footer"></footer>
   </body>
 </html>
