Finished footer besides mobile repsoveness

--- a/index.html
+++ b/index.html
@@ -439,6 +439,66 @@
       </div>
     </section>
     
-    <footer id="footer"></footer>
+    <footer id="footer">
+      <div class="container">
+        <div class="left-section">
+          <div class="header">RAIN CITY WEBSITES</div>
+          <div class="footer-menu">
+            <div class="footer-menu-link"><a href="#">ABOUT</a></div>
+            <div class="footer-menu-link"><a href="#">PORTFOLIO</a></div>
+            <div class="footer-menu-link"><a href="#">SERVICES</a></div>
+            <div class="footer-menu-link"><a href="#">BLOG</a></div>
+            <div class="footer-menu-link"><a href="#">CONTACT</a></div>
+          </div>
+          <label>Join Our Newsletter!</label>
+          <input
+            type="email"
+            id="email"
+            name="email"
+            placeholder="Email Address"
+          />
+        </div>
+        <div class="right-section">
+          <div class="header">RAINCITYWEBSITES@GMAIL.COM</div>
+          <p>
+            Rain City Websites is proud to serve the local Seattle community and more. We have been helping small businesses thrive by providing affordable options for websites. Get in contact and learn how you can optimize your business today!
+          </p>
+          <div class="footer-services">
+            <div class="footer-services-section">
+              <div class="services-section-header">DESIGN</div>
+              <div class="services-section-label">Branding</div>
+              <div class="services-section-label">UI/UX Design</div>
+              <div class="services-section-label">Custom Themes</div>
+            </div>
+            <div class="footer-services-section">
+              <div class="services-section-header">DEVELOP</div>
+              <div class="services-section-label">Web Development</div>
+              <div class="services-section-label">No-Code Development</div>
+              <div class="services-section-label">Content Creation</div>
+            </div>
+            <div class="footer-services-section">
+              <div class="services-section-header">GROW</div>
+              <div class="services-section-label">SEO Research</div>
+              <div class="services-section-label">Site Maintenance</div>
+              <div class="services-section-label">Consistent Updates</div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
+
+    <div class="socials">
+      <div class="container">
+        <div class="socials-left">
+          LEFT
+        </div>
+        <div class="socials-middle">
+          MIDDLE
+        </div>
+        <div class="socials-right">
+          TERMS
+        </div>
+      </div>
+    </div>
   </body>
 </html>
