Completed landing page template

--- a/index.html
+++ b/index.html
@@ -443,6 +443,11 @@
       <div class="container">
         <div class="left-section">
           <div class="header">RAIN CITY WEBSITES</div>
+          <p>
+            Rain City Websites is proud to serve the local Seattle community and more. We have been helping small businesses thrive by providing affordable options for websites. Get in contact and learn how you can optimize your business today!
+          </p>
+          <div class="footer-email-mobile">RAINCITYWEBSITES@GMAIL.COM</div>
+          
           <div class="footer-menu">
             <div class="footer-menu-link"><a href="#">ABOUT</a></div>
             <div class="footer-menu-link"><a href="#">PORTFOLIO</a></div>
