Socials link progress

--- a/index.html
+++ b/index.html
@@ -495,13 +495,19 @@
     <div class="socials">
       <div class="container">
         <div class="socials-left">
-          LEFT
+          RAIN CITY LLC
         </div>
         <div class="socials-middle">
-          MIDDLE
+          <a href="about.html"><img src="images/reddit.svg"></a>
+          <a href="about.html"><img src="images/linkedin.svg"></a>
+          <a href="about.html"><img src="images/Twitter.svg"></a>
+          <a href="about.html"><img src="images/instagram.svg"></a>
+          <a href="about.html"><img src="images/facebook.svg"></a>
         </div>
         <div class="socials-right">
-          TERMS
+          <a href="about.html">TERMS</a>
+          <a href="about.html">PRIVACY</a>
+          <a href="about.html">COOKIES</a>
         </div>
       </div>
     </div>
