Playing with mouse styles Javascript

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <link rel="stylesheet" href="/css/root.css" type="text/css" />
     <link rel="stylesheet" href="/css/local.css" />
 
+    <!-- JS -->
+    <script async type="text/javascript" src="scripts.js" id="_carbonads_js"></script>
+
     <title>Rain City Websites</title>
   </head>
   <body>
@@ -21,12 +24,15 @@
     <!--                   NAVIGATION                 -->
     <!-- ============================================ -->
 
+    
+
     <header>
       <!-- Normal Nav -->
       <nav>
         <div class="navbar">
           <div class="navbar-navigation">
-            <a href="index.html">RAIN CITY WEBSITES</a>
+            <!-- <a href="index.html"><img src="images/raincitylogo2.svg"></a> -->
+            <a href="index.html">RAIN CITY</a> 
           </div>
           <div class="navbar-menu">
             <ul>
@@ -491,6 +497,8 @@
         </div>
       </div>
     </footer>
+
+    <div id="mouse-circle"></div>
 
     <div class="socials">
       <div class="container">
