--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
       <nav>
         <div class="navbar">
           <div class="navbar-navigation">
-            <a href="index.html">RAIN CITY WEBSITES</a>
+            <a href="index.html">RAIN CITY</a>
           </div>
           <div class="navbar-menu">
             <ul>
