Added mouse circle animation

--- a/index.html
+++ b/index.html
@@ -15,7 +15,33 @@
     <link rel="stylesheet" href="/css/local.css" />
 
     <!-- JS -->
-    <script async type="text/javascript" src="scripts.js" id="_carbonads_js"></script>
+    <script type="text/javascript">
+      document.addEventListener("DOMContentLoaded", () => {
+      let mousePosX = 0,
+        mousePosY = 0,
+        mouseCircle = document.getElementById("mouse-circle");
+
+      document.onmousemove = (e) => {
+        mousePosX = e.pageX;
+        mousePosY = e.pageY;
+      };
+
+      let delay = 4,
+        revisedMousePosX = 0,
+        revisedMousePosY = 0;
+
+      function delayMouseFollow() {
+        requestAnimationFrame(delayMouseFollow);
+
+        revisedMousePosX += (mousePosX - revisedMousePosX) / delay;
+        revisedMousePosY += (mousePosY - revisedMousePosY) / delay;
+
+        mouseCircle.style.top = revisedMousePosY + "px";
+        mouseCircle.style.left = revisedMousePosX + "px";
+      }
+      delayMouseFollow();
+    });
+    </script>
 
     <title>Rain City Websites</title>
   </head>
