Began work on other pages

--- a/services.html
+++ b/services.html
@@ -12,7 +12,7 @@
 
     <!-- CSS -->
     <link rel="stylesheet" href="/css/root.css" type="text/css" />
-    <link rel="stylesheet" href="/css/local.css" />
+    <link rel="stylesheet" href="/css/services.css" />
 
     <title>Rain City Websites</title>
   </head>
@@ -26,7 +26,7 @@
       <nav>
         <div class="navbar">
           <div class="navbar-navigation">
-            <a href="index.html">RAIN CITY WEBSITES</a>
+            <a href="index.html">RAIN CITY</a>
           </div>
           <div class="navbar-menu">
             <ul>
@@ -101,24 +101,204 @@
       </div>
     </div>
 
-    <!-- ============================================ -->
-    <!--                   PORTFOLIO                  -->
-    <!-- ============================================ -->
+    <section id="OurServices" class="section">
+      <div class="container">
+        <div class="header">
+          SERVICES WE OFFER
+        </div>
+        <div class="services-grid">
+          <div class="services-grid-element">
+            <div class="icon"></div>
+            <div class="header">Custom Web Development</div>
+            <p>Our professional web development team can build high-performing, scalable custom web applications that match your business requirements and significantly increase customer engagement.</p>
+          </div>
+          <div class="services-grid-element">
+            <div class="icon"></div>
+            <div class="header">Web Support and Maintenance</div>
+            <p>Our cooperation with you won't end once your web development project goes live. Web development services by COAX Software include maintenance and support to make sure your web solution is always up and running.</p>
+          </div>
+          <div class="services-grid-element">
+            <div class="icon"></div>
+            <div class="header">eCommerce Development</div>
+            <p>Deliver personalized shopping experiences to your customers by leveraging our eCommerce web development services for B2B, B2C, and C2C.</p>
+          </div>
+          <div class="services-grid-element">
+            <div class="icon"></div>
+            <div class="header">Third-Party Integrations</div>
+            <p>We'll help you enhance the capability of your web apps through integration with various third-party plugins serving BI, analytics, social media, and more.</p>
+          </div>
+          <div class="services-grid-element">
+            <div class="icon"></div>
+            <div class="header">Enterprise Web Development</div>
+            <p>Increase the operational efficiency of your enterprise by creating interactive, fluid, and easy-to-use custom enterprise-grade web applications.</p>
+          </div>
+          <div class="services-grid-element">
+            <div class="icon"></div>
+            <div class="header"></div>
+            <p>We help you modernize and upgrade your legacy apps without disturbing your business processes using the right middleware components.</p>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <!-- ============================================ -->
-    <!--                   PRICING                    -->
+    <!--                   PROCESS                    -->
     <!-- ============================================ -->
+    <div id="section-title">
+      <div class="container">
+        <div class="left-section">How It Works</div>
+        <div class="right-section">PROCESS</div>
+      </div>
+    </div>
 
-    <!-- ============================================ -->
-    <!--                   BLOG                       -->
-    <!-- ============================================ -->
+    <div id="process" class="section">
+      <div class="container">
+        <div class="left-section">
+          <div class="left-section-element">
+            <div class="number">01</div>
+            <div class="header">DISCOVERY</div>
+            <p>Let's get to know each other. Allow us to understand your current and future business goals, visions, and objectives to help you reach your goals.</p>
+          </div>
+          <div class="left-section-element">
+            <div class="number">02</div>
+            <div class="header">PROJECT DESIGN</div>
+            <p>Good designs stand the test of time.  Work closely with us to ensure that you are satisfied with the design of the project.</p>
+          </div>
+          <div class="left-section-element">
+            <div class="number">03</div>
+            <div class="header">CUSTOM DEVELOPMENT</div>
+            <p>Good designs stand the test of time.  Work closely with us to ensure that you are satisfied with the design of the project.</p>
+          </div>
+        </div>
+        <div class="right-section">
+          <div class="right-section-element">
+            <div class="header">DISCOVERY CALL</div>
+            <p>The discovery call is an introductory meeting that helps us get to know you and understand your business, business goals, objectives, budget, and timeline. 
+              During this call, we will scope your project to see how we can help. A further discovery call may be scheduled with you if we have any follow-up questions.
+            </p>
+          </div>
+          <div class="right-section-element">
+            <div class="header">CONTRACT REVIEW</div>
+            <p>Once both parties approve and sign off on the scope of work, timeline, and budget proposal, we will send over a service agreement for you to review and e-sign. 
+              At this time, we will also sign NDAs for your project if we discussed them beforehand.
+            </p>
+          </div>
+          <div class="right-section-element">
+            <div class="header">WIREFRAME & UI/UX DESIGN</div>
+            <p>The discovery call is an introductory meeting that helps us get to know you and understand your business, business goals, objectives, budget, and timeline.
+              During this call, we will scope your project to see how we can help. A further discovery call may be scheduled with you if we have any follow-up questions.
+            </p>
+          </div>
+          <div class="right-section-element">
+            <div class="header">REVIEWS & REVISIONS</div>
+            <p>You will always be in control and we always appreciate your feedback. Follow the whole process with live links from Figma. We usually provide 3 collaborative revisions per page.
+              Once the design is complete and you are happy with everything, you will sign off on the final design. This finalized design then moves on to development.
+            </p>
+          </div>
+          <div class="right-section-element">
+            <div class="header">PIXEL-PERFECT DEVELOPMENT</div>
+            <p>Our developers take the finalized high-fidelity designs to development. Every development is built to follow only the highest internet standards. Whether it is Webflow or custom development, every page will be structured for your ease-of-use in mind. 
+              You will be able to follow the whole development phase with demo links provided by your project manager.
+            </p>
+          </div>
+          <div class="right-section-element">
+            <div class="header">SEO OPTIMIZATIONS</div>
+            <p>We take care of on-page SEO for you. Every project we develop includes:
+              • On-Page SEO
+              • XML sitemap
+              • Robots.txt
+              • 301 Redirects
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+
 
     <!-- ============================================ -->
     <!--                   FOOTER                     -->
     <!-- ============================================ -->
 
-    <footer id="footer"></footer>
+    <section id="section-title">
+      <div class="container">
+        <div class="left-section">Get In Touch</div>
+        <div class="right-section">CONTACT</div>
+      </div>
+    </section>
+    
+    <footer id="footer">
+      <div class="container">
+        <div class="left-section">
+          <div class="header">RAIN CITY WEBSITES</div>
+          <p>
+            Rain City Websites is proud to serve the local Seattle community and more. We have been helping small businesses thrive by providing affordable options for websites. Get in contact and learn how you can optimize your business today!
+          </p>
+          <div class="footer-email-mobile">RAINCITYWEBSITES@GMAIL.COM</div>
+          
+          <div class="footer-menu">
+            <div class="footer-menu-link"><a href="#">ABOUT</a></div>
+            <div class="footer-menu-link"><a href="#">PORTFOLIO</a></div>
+            <div class="footer-menu-link"><a href="#">SERVICES</a></div>
+            <div class="footer-menu-link"><a href="#">BLOG</a></div>
+            <div class="footer-menu-link"><a href="#">CONTACT</a></div>
+          </div>
+          <label>Join Our Newsletter!</label>
+          <input
+            type="email"
+            id="email"
+            name="email"
+            placeholder="Email Address"
+          />
+        </div>
+        <div class="right-section">
+          <div class="header">RAINCITYWEBSITES@GMAIL.COM</div>
+          <p>
+            Rain City Websites is proud to serve the local Seattle community and more. We have been helping small businesses thrive by providing affordable options for websites. Get in contact and learn how you can optimize your business today!
+          </p>
+          <div class="footer-services">
+            <div class="footer-services-section">
+              <div class="services-section-header">DESIGN</div>
+              <div class="services-section-label">Branding</div>
+              <div class="services-section-label">UI/UX Design</div>
+              <div class="services-section-label">Custom Themes</div>
+            </div>
+            <div class="footer-services-section">
+              <div class="services-section-header">DEVELOP</div>
+              <div class="services-section-label">Web Development</div>
+              <div class="services-section-label">No-Code Development</div>
+              <div class="services-section-label">Content Creation</div>
+            </div>
+            <div class="footer-services-section">
+              <div class="services-section-header">GROW</div>
+              <div class="services-section-label">SEO Research</div>
+              <div class="services-section-label">Site Maintenance</div>
+              <div class="services-section-label">Consistent Updates</div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
+
+    <div id="mouse-circle"></div>
+
     <div class="socials">
+      <div class="container">
+        <div class="socials-left">
+          RAIN CITY LLC
+        </div>
+        <div class="socials-middle">
+          <a href="about.html"><img src="images/reddit.svg"></a>
+          <a href="about.html"><img src="images/linkedin.svg"></a>
+          <a href="about.html"><img src="images/Twitter.svg"></a>
+          <a href="about.html"><img src="images/instagram.svg"></a>
+          <a href="about.html"><img src="images/facebook.svg"></a>
+        </div>
+        <div class="socials-right">
+          <a href="about.html">TERMS</a>
+          <a href="about.html">PRIVACY</a>
+          <a href="about.html">COOKIES</a>
+        </div>
+      </div>
     </div>
   </body>
 </html>
