--- a/about.html
+++ b/about.html
@@ -13,6 +13,7 @@
     <!-- CSS -->
     <link rel="stylesheet" href="/css/root.css" type="text/css" />
     <link rel="stylesheet" href="/css/local.css" />
+    <link rel="stylesheet" href="/css/about.css" />
 
     <title>Rain City Websites</title>
   </head>
@@ -91,7 +92,7 @@
     </section>
 
     <!-- ============================================ -->
-    <!--                   SERVICES                   -->
+    <!--                   ABOUT                      -->
     <!-- ============================================ -->
 
     <div id="section-title">
@@ -101,23 +102,188 @@
       </div>
     </div>
 
-    <!-- ============================================ -->
-    <!--                   PORTFOLIO                  -->
-    <!-- ============================================ -->
+    <section id="about" class="section">
+      <div class="container">
+        <div class="left-section">
+          <div class="about-header">WHO WE ARE</div>
+        </div>
+        <div class="right-section">
+          <p>
+            We don't just create web design for the internet, we create meaningful digital experiences for users that go above and beyond through data-driven UI/UX practices. Our design scales and converts.
+          </p>
+          <p>
+            As the only constant is change, traditional web design is outdated. While it may still  "work," it is difficult to deliver satisfactory results in an already extremely competitive market. Proactive, strategy-driven user experiences is the new standard to engage with the target audience.
+          </p>
+          <p>
+            Our design team at Vyntex has extensive and up-to-date knowledge in UI (user interface), UX (user experience), CX (customer experience), graphic design, animations, and more. As a website is a business's best marketing tool, we delivery exceptional user experience that sells.
+          </p>
+          <p>
+            Our team will always over deliver to ensure that your business has the tools necessary to succeed. Bring your ideas and products to life with our talented design team.
+          </p>
+        </div>
+      </div>
+
+    </section>
 
     <!-- ============================================ -->
-    <!--                   PRICING                    -->
+    <!--                   WHY US                     -->
     <!-- ============================================ -->
 
+    <div id="section-title">
+      <div class="container">
+        <div class="left-section">Why Us</div>
+        <div class="right-section">02</div>
+      </div>
+    </div>
+
+    <section id="why-us" class="section">
+      <div class="container">
+        <div class="left-section">
+          <div class="left-section-header">
+            QUALITY OVER <span id="orange-header">QUANTITY</span>
+          </div>
+          <p>We focus on the needs on each individual business and tailor content around what makes it unique. </p>
+        </div>
+        <div class="right-section">
+          <div class="right-section-container">
+            NO PRE-WRITTEN CONTENT
+          </div>
+          <div class="right-section-container">
+            UNLIMITED DESIGN REVISIONS
+          </div>
+          <div class="right-section-container">
+            COMPLETELY CUSTOM WORK
+          </div>
+          <div class="right-section-container">
+            DEDICATED CUSTOMER SERVICE
+          </div>
+          <div class="right-section-container">
+            UNLIMITED REVISIONS
+          </div>
+        </div>
+      </div>
+    </section>
+
     <!-- ============================================ -->
-    <!--                   BLOG                       -->
+    <!--               MEET THE TEAM                  -->
     <!-- ============================================ -->
+
+    <div id="section-title">
+      <div class="container">
+        <div class="left-section">Meet The Team</div>
+        <div class="right-section">03</div>
+      </div>
+    </div>
+
+    <section id="meet-the-team" class="section">
+      <div class="container">
+        <div class="left-section">
+          <img src="images/bryan_photo.svg"/>
+        </div>
+        <div class="right-section">
+          <div class="right-section-header">
+            JOIN THE FAMILY!
+          </div>
+          <p>
+            We don't just create web design for the internet, we create meaningful digital experiences for users that go above and beyond through data-driven UI/UX practices. Our design scales and converts.
+          </p>
+          <p>
+            As the only constant is change, traditional web design is outdated. While it may still  "work," it is difficult to deliver satisfactory results in an already extremely competitive market. Proactive, strategy-driven user experiences is the new standard to engage with the target audience.
+          </p>
+          <p>
+            Our design team at Vyntex has extensive and up-to-date knowledge in UI (user interface), UX (user experience), CX (customer experience), graphic design, animations, and more. As a website is a business's best marketing tool, we delivery exceptional user experience that sells.
+          </p>
+          <p>
+            Our team will always over deliver to ensure that your business has the tools necessary to succeed. Bring your ideas and products to life with our talented design team.
+          </p>
+        </div>
+      </div>
+    </section>
 
     <!-- ============================================ -->
     <!--                   FOOTER                     -->
     <!-- ============================================ -->
 
-    <footer id="footer"></footer>
-    <div class="socials"></div>
+    <section id="section-title">
+      <div class="container">
+        <div class="left-section">Get In Touch</div>
+        <div class="right-section">CONTACT</div>
+      </div>
+    </section>
+    
+    <footer id="footer">
+      <div class="container">
+        <div class="left-section">
+          <div class="header">RAIN CITY WEBSITES</div>
+          <p>
+            Rain City Websites is proud to serve the local Seattle community and more. We have been helping small businesses thrive by providing affordable options for websites. Get in contact and learn how you can optimize your business today!
+          </p>
+          <div class="footer-email-mobile">RAINCITYWEBSITES@GMAIL.COM</div>
+          
+          <div class="footer-menu">
+            <div class="footer-menu-link"><a href="#">ABOUT</a></div>
+            <div class="footer-menu-link"><a href="#">PORTFOLIO</a></div>
+            <div class="footer-menu-link"><a href="#">SERVICES</a></div>
+            <div class="footer-menu-link"><a href="#">BLOG</a></div>
+            <div class="footer-menu-link"><a href="#">CONTACT</a></div>
+          </div>
+          <label>Join Our Newsletter!</label>
+          <input
+            type="email"
+            id="email"
+            name="email"
+            placeholder="Email Address"
+          />
+        </div>
+        <div class="right-section">
+          <div class="header">RAINCITYWEBSITES@GMAIL.COM</div>
+          <p>
+            Rain City Websites is proud to serve the local Seattle community and more. We have been helping small businesses thrive by providing affordable options for websites. Get in contact and learn how you can optimize your business today!
+          </p>
+          <div class="footer-services">
+            <div class="footer-services-section">
+              <div class="services-section-header">DESIGN</div>
+              <div class="services-section-label">Branding</div>
+              <div class="services-section-label">UI/UX Design</div>
+              <div class="services-section-label">Custom Themes</div>
+            </div>
+            <div class="footer-services-section">
+              <div class="services-section-header">DEVELOP</div>
+              <div class="services-section-label">Web Development</div>
+              <div class="services-section-label">No-Code Development</div>
+              <div class="services-section-label">Content Creation</div>
+            </div>
+            <div class="footer-services-section">
+              <div class="services-section-header">GROW</div>
+              <div class="services-section-label">SEO Research</div>
+              <div class="services-section-label">Site Maintenance</div>
+              <div class="services-section-label">Consistent Updates</div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
+
+    <div id="mouse-circle"></div>
+
+    <div class="socials">
+      <div class="container">
+        <div class="socials-left">
+          RAIN CITY LLC
+        </div>
+        <div class="socials-middle">
+          <a href="about.html"><img src="images/reddit.svg"></a>
+          <a href="about.html"><img src="images/linkedin.svg"></a>
+          <a href="about.html"><img src="images/Twitter.svg"></a>
+          <a href="about.html"><img src="images/instagram.svg"></a>
+          <a href="about.html"><img src="images/facebook.svg"></a>
+        </div>
+        <div class="socials-right">
+          <a href="about.html">TERMS</a>
+          <a href="about.html">PRIVACY</a>
+          <a href="about.html">COOKIES</a>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
