--- a/blog.html
+++ b/blog.html
@@ -12,7 +12,7 @@
 
     <!-- CSS -->
     <link rel="stylesheet" href="/css/root.css" type="text/css" />
-    <link rel="stylesheet" href="/css/local.css" />
+    <link rel="stylesheet" href="/css/blog.css" />
 
     <title>Rain City Websites</title>
   </head>
@@ -26,7 +26,7 @@
       <nav>
         <div class="navbar">
           <div class="navbar-navigation">
-            <a href="index.html">RAIN CITY WEBSITES</a>
+            <a href="index.html">RAIN CITY</a>
           </div>
           <div class="navbar-menu">
             <ul>
@@ -91,7 +91,7 @@
     </section>
 
     <!-- ============================================ -->
-    <!--                   SERVICES                   -->
+    <!--                   BLOG                       -->
     <!-- ============================================ -->
 
     <div id="section-title">
@@ -100,6 +100,78 @@
         <div class="right-section">BLOG</div>
       </div>
     </div>
+
+    <section id="blog" class="section">
+      <div class="container">
+        <div class="left-section">
+          <div class="header">CATEGORIES</div>
+          <div class="categories">
+            <div class="category-element">
+              <img src=""/>
+              <div class="header">News</div>
+            </div>
+            <div class="category-element">
+              <img src=""/>
+              <div class="header">Project Management</div>
+            </div>
+            <div class="category-element">
+              <img src=""/>
+              <div class="header">Design</div>
+            </div>
+            <div class="category-element">
+              <img src=""/>
+              <div class="header">Development</div>
+            </div>
+            <div class="category-element">
+              <img src=""/>
+              <div class="header">All</div>
+            </div>
+          </div>
+        </div>
+        <div class="right-section">
+          <div class="blog-page-element">
+            <div class="icon"><img src=""/></div>
+            <div class="sub-header">11.22.2022  Bryan Moore</div>
+            <div class="header">Advantages of Developing your own Website</div>
+            <p>The discovery call is an introductory meeting that helps us get to know you and understand your business, business goals, objectives, budget, and timeline.
+              During this call, we will scope your project to see how we can help. A further discovery call may be scheduled with you if we have any follow-up questions.
+            </p>
+          </div>
+          <div class="blog-page-element">
+            <div class="icon"></div>
+            <div class="sub-header">11.22.2022  Bryan Moore</div>
+            <div class="header">Optimizing Images for the Web</div>
+            <p>The discovery call is an introductory meeting that helps us get to know you and understand your business, business goals, objectives, budget, and timeline.
+              During this call, we will scope your project to see how we can help. A further discovery call may be scheduled with you if we have any follow-up questions.
+            </p>
+          </div>
+          <div class="blog-page-element">
+            <div class="icon"></div>
+            <div class="sub-header">11.22.2022  Bryan Moore</div>
+            <div class="header">How to Drive Traffic to your Website</div>
+            <p>The discovery call is an introductory meeting that helps us get to know you and understand your business, business goals, objectives, budget, and timeline.
+              During this call, we will scope your project to see how we can help. A further discovery call may be scheduled with you if we have any follow-up questions.
+            </p>
+          </div>
+          <div class="blog-page-element">
+            <div class="icon"></div>
+            <div class="sub-header">11.22.2022  Bryan Moore</div>
+            <div class="header">Benefits of a Professional Business Website</div>
+            <p>The discovery call is an introductory meeting that helps us get to know you and understand your business, business goals, objectives, budget, and timeline.
+              During this call, we will scope your project to see how we can help. A further discovery call may be scheduled with you if we have any follow-up questions.
+            </p>
+          </div>
+          <div class="blog-page-element">
+            <div class="icon"></div>
+            <div class="sub-header">11.22.2022  Bryan Moore</div>
+            <div class="header">SEO Strategies for Today and Tomorrow</div>
+            <p>The discovery call is an introductory meeting that helps us get to know you and understand your business, business goals, objectives, budget, and timeline.
+              During this call, we will scope your project to see how we can help. A further discovery call may be scheduled with you if we have any follow-up questions.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <!-- ============================================ -->
     <!--                   PORTFOLIO                  -->
@@ -117,9 +189,86 @@
     <!--                   FOOTER                     -->
     <!-- ============================================ -->
 
-    <footer id="footer"></footer>
+    <section id="section-title">
+      <div class="container">
+        <div class="left-section">Get In Touch</div>
+        <div class="right-section">CONTACT</div>
+      </div>
+    </section>
+    
+    <footer id="footer">
+      <div class="container">
+        <div class="left-section">
+          <div class="header">RAIN CITY WEBSITES</div>
+          <p>
+            Rain City Websites is proud to serve the local Seattle community and more. We have been helping small businesses thrive by providing affordable options for websites. Get in contact and learn how you can optimize your business today!
+          </p>
+          <div class="footer-email-mobile">RAINCITYWEBSITES@GMAIL.COM</div>
+          
+          <div class="footer-menu">
+            <div class="footer-menu-link"><a href="#">ABOUT</a></div>
+            <div class="footer-menu-link"><a href="#">PORTFOLIO</a></div>
+            <div class="footer-menu-link"><a href="#">SERVICES</a></div>
+            <div class="footer-menu-link"><a href="#">BLOG</a></div>
+            <div class="footer-menu-link"><a href="#">CONTACT</a></div>
+          </div>
+          <label>Join Our Newsletter!</label>
+          <input
+            type="email"
+            id="email"
+            name="email"
+            placeholder="Email Address"
+          />
+        </div>
+        <div class="right-section">
+          <div class="header">RAINCITYWEBSITES@GMAIL.COM</div>
+          <p>
+            Rain City Websites is proud to serve the local Seattle community and more. We have been helping small businesses thrive by providing affordable options for websites. Get in contact and learn how you can optimize your business today!
+          </p>
+          <div class="footer-services">
+            <div class="footer-services-section">
+              <div class="services-section-header">DESIGN</div>
+              <div class="services-section-label">Branding</div>
+              <div class="services-section-label">UI/UX Design</div>
+              <div class="services-section-label">Custom Themes</div>
+            </div>
+            <div class="footer-services-section">
+              <div class="services-section-header">DEVELOP</div>
+              <div class="services-section-label">Web Development</div>
+              <div class="services-section-label">No-Code Development</div>
+              <div class="services-section-label">Content Creation</div>
+            </div>
+            <div class="footer-services-section">
+              <div class="services-section-header">GROW</div>
+              <div class="services-section-label">SEO Research</div>
+              <div class="services-section-label">Site Maintenance</div>
+              <div class="services-section-label">Consistent Updates</div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
+
+    <div id="mouse-circle"></div>
+
     <div class="socials">
-      <div class="container">SOCIALS</div>
+      <div class="container">
+        <div class="socials-left">
+          RAIN CITY LLC
+        </div>
+        <div class="socials-middle">
+          <a href="about.html"><img src="images/reddit.svg"></a>
+          <a href="about.html"><img src="images/linkedin.svg"></a>
+          <a href="about.html"><img src="images/Twitter.svg"></a>
+          <a href="about.html"><img src="images/instagram.svg"></a>
+          <a href="about.html"><img src="images/facebook.svg"></a>
+        </div>
+        <div class="socials-right">
+          <a href="about.html">TERMS</a>
+          <a href="about.html">PRIVACY</a>
+          <a href="about.html">COOKIES</a>
+        </div>
+      </div>
     </div>
   </body>
 </html>
